--- a/GVRP_Entry_client/styles/layout/layout.css
+++ b/GVRP_Entry_client/styles/layout/layout.css
@@ -11,6 +11,7 @@
 .main-layout {
     display: flex;
     height: calc(100vh - var(--navbar-height));
+    overflow: hidden;
 }
 
 .main-content {
@@ -18,6 +19,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    height: 100%;
 }
 
 /* Map Container Global Setup */
