--- a/GVRP_Entry_client/styles/main.css
+++ b/GVRP_Entry_client/styles/main.css
@@ -23,3 +23,6 @@
 @import 'screens/depot-setup.css';
 @import 'screens/fleet-setup.css';
 @import 'screens/main-screen.css';
+
+/* 5. Utilities */
+@import "utils/z-index.css";
