update UI add route view and timeline view

--- a/GVRP_Entry_client/styles/main.css
+++ b/GVRP_Entry_client/styles/main.css
@@ -18,6 +18,7 @@
 @import 'components/stats.css';
 @import 'components/modals.css';
 @import 'components/misc.css';
+@import 'components/view.css';
 
 /* 4. Screens */
 @import 'screens/depot-setup.css';
